# EDNL_ArbolesBinarios

./: ArbolBinario.h  ArbolBinarioIO.cpp  ArbolBinarioIO.h  CMakeLists.txt  README.md  main.cpp
ejercicio1/: ejercicio1.h
ejercicio2/: ejercicio2.cpp  ejercicio2.h
ejercicio3/: ejercicio3.h
ejercicio5/: ej5
ejercicio6/: ejercicio6.h
ejercicio7/: ejercicio7.h
examen/: examen.cpp  examen.h
practica1/ejercicio1/: ejercicio1_1.h
practica1/ejercicio2/: ejercicio2_1.cpp  ejercicio2_1.h
practica1/ejercicio3/: ejercicio3_1.h
practica1/ejercicio6/: ejercicio6_1.h
practica1/ejercicio7/: ejercicio7_1.h
practica2/ejercicio1/: ejercicio1_2.h
practica2/ejercicio2/: ejercicio2_2.h
practica2/ejercicio3/: ArbolBinarioAritmeticoIO.cpp  ArbolBinarioAritmeticoIO.h  ArbolBinarioAritmeticoIO.hpp  ExpresionAritmetica.h  ExpresionAritmetica.hpp  ejercicio3_2.h  ejercicio3_2.hpp
preExamen/: poda.cpp  poda.h
