cmake_minimum_required(VERSION 3.19)
project(Practica1EDNL)

set(CMAKE_CXX_STANDARD 11)

add_executable(Practica1EDNL main.cpp ArbolBinario.h ArbolBinarioIO.h ArbolBinarioIO.cpp ejercicio1/ejercicio1.h
        ejercicio2/ejercicio2.h ejercicio2/ejercicio2.cpp ejercicio3/ejercicio3.h ejercicio6/ejercicio6.h ejercicio7/ejercicio7.h)